--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,19 @@
 /* Layout */
 main {
+    background-color: #000000;
     color: #ebebd3;
-    padding-top: 1rem;
-    padding-bottom: 8rem;
+    padding: 1rem 0 6vh;
     font-family: Verdana, Arial, Helvetica, sans-serif;
+}
+.grid-container {
+    display: grid;
+    gap: 1rem;
+    grid-auto-columns: 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-areas: 'one' 'two' 'three' 'four' 'five';
+    width: min(97%, 90rem);
+    margin-inline: auto;
+    justify-content: space-around;
 }
 .content > h1 {
     color: #ffbfea; /* pink */
@@ -11,7 +21,6 @@ main {
     text-shadow: none;}
 .content > h2, h3, h4 {
     color: #8dd88e; /* grün */
-    margin-top: 1.3em;
 }
 .content a,
 .content b {color: #00f0f0;} /* blau */
@@ -29,8 +38,7 @@ main {
 .content:nth-child(4) {grid-area: four;}
 .content:nth-child(5) {grid-area: five;}
 .content {
-    padding: 1rem;
-    border-radius: 0.3rem;
+    border-radius: 0.35rem;
     box-shadow:
         rgba(0, 240, 240, 0.4) 0px 2px 4px,
         rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
@@ -38,35 +46,19 @@ main {
     text-shadow: 1.5px 2px black;
     background-color: #131313;
     position: relative;
+    padding: 0 0.8rem 1em;
     align-items: center;
     justify-content: space-around;
 }
-.grid-container {
-    display: grid;
-    gap: 1rem;
-    grid-auto-columns: 1fr;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-template-areas: 'one' 'two' 'three' 'four' 'five';
-    width: min(97%, 70rem);
-    margin-inline: auto;
-    justify-content: space-between;
-}
-.flow > *:where(:not(:first-child)) {
-    margin-top: var(--flow-spacer, 0.2rem);
-}
-.flex {
-    display: flex;
-    gap: var(--gap, 0.6rem);
-}
 .inside-content {
-    height:100%;
-    display: flex;
-    align-items: center;
+    position: relative;
+    margin: 0;
+    align-items: start;
     justify-content: space-around;
 }
 .in-inside {
-    height:100%;
-    margin-top: 0;
+    justify-content: space-evenly;
+
 }
 .window-content { /* Code-Syntax */
     align-self: flex-start;
@@ -85,8 +77,3 @@ main {
     padding-left: 1em;
     border: 3px solid #133337;
 }
-#bigHL {width: 100%;text-align: center;}
-#dl-link {padding: 0.6rem;}
-#exportIcon {display:none;}
-#instagramIcon {display:none;}
-#disabled {display:none;}
