--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,37 +1,55 @@
-/* Layout */
-main {
-    background-color: #000000;
-    color: #ebebd3;
-    padding: 1rem 0 6vh;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
-}
 .grid-container {
     display: grid;
     gap: 1rem;
     grid-auto-columns: 1fr;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-template-areas: 'one' 'two' 'three' 'four' 'five';
+    grid-template-areas:
+    'one' 'two' 'three' 'four' 'five';
     width: min(97%, 90rem);
     margin-inline: auto;
     justify-content: space-around;
 }
-.content > h1 {
-    color: #ffbfea; /* pink */
-    animation: neon .08s ease-in-out infinite alternate;
-    text-shadow: none;}
-.content > h2, h3, h4 {
-    color: #8dd88e; /* grün */
+@media screen and (min-width: 33em) {
+     .grid-container {grid-template-areas:
+          "one one"
+          "two three"
+          "five five"
+          "four four";
+    }
+}
+@media screen and (min-width: 38em) {
+     .grid-container {grid-template-areas:
+          "one one'
+          'two five'
+          'three five'
+          'four four";
+    }
+}
+@media screen and (min-width: 54em) {
+     .grid-container {grid-template-areas:
+         "one one two"
+         "five five five"
+         "three four four";
+    }
+}
+@media screen and (min-width: 75em) {
+     .grid-container {grid-template-areas:
+         "one one two five"
+         "three four four five";
+    }
+}
+.content h1 {color: #ffbfea;} /* pink */
+.content h2, h3, h4 {color: #8dd88e;} /* grün */
 }
 .content a,
 .content b {color: #00f0f0;} /* blau */
 .content a:hover,
-.content a:focus {
+.content a:focus, {
     text-decoration: none;
     color: #ffbfea; /* pink */
     animation: neon .08s ease-in-out infinite alternate;
     text-shadow: none;
 }
-.content b {color: #00f0f0;} /* blau */
 .content:nth-child(1) {grid-area: one;}
 .content:nth-child(2) {grid-area: two;}
 .content:nth-child(3) {grid-area: three;}
@@ -50,7 +68,17 @@ main {
     align-items: center;
     justify-content: space-around;
     line-height: 1.2rem;
-
+}
+.flow > *:where(:not(:first-child)) {
+    margin-top: var(--flow-spacer, 0.2rem);
+}
+.flex {
+    display: flex;
+    gap: var(--gap, 0.6rem);
+}
+.glow {
+    animation: neon .08s ease-in-out infinite alternate;
+    text-shadow: none;
 }
 .inside-content {
     position: relative;
@@ -60,22 +88,104 @@ main {
 }
 .in-inside {
     justify-content: space-evenly;
-
 }
-.window-content { /* Code-Syntax */
-    align-self: flex-start;
-    width: auto;
-    color: #ebebd3;
-    display: inline-block;
+
     text-decoration: none;
-    color: inherit;
-    flex-direction: row;
-    font-size: 0.65em;
     font-family: 'Source Code Pro', monospace;
-    line-height: 1.337em;
-    max-width: 640px;
-    text-align: left;
     text-shadow: none;
-    padding-left: 1em;
-    border: 3px solid #133337;
+}
+/* Menu Animation */
+@keyframes clipPathCircleOpen {
+    0% {clip-path: circle(0% at top right);}
+    100% {clip-path: circle(250% at top right);}
+}
+
+@keyframes clipPathCircleClose {
+    0% {clip-path: circle(250% at top right);}
+    100% {clip-path: circle(0% at top right);}
+}[id*="modalTrigger"] {
+  border-radius: 3px;
+  cursor: pointer;
+}
+[id*="modalTrigger"]:hover {
+  opacity: 0.8;
+  outline: solid;
+  outline-color: #ffbfea;
+  animation: neon .08s ease-in-out infinite alternate;
+}
+dialog[open] {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  border-radius: 0.3rem;
+  text-shadow: 1.5px 2px black;
+  background-color: #131313;
+  color: #8dd88e; /* grün */
+  border: none;
+  box-shadow:
+    rgba(0, 240, 240, 0.4) 0px 2px 4px,
+    rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
+    rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
+}
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+dialog > img {border-radius: 0.3rem;}
+[id*="closeModal"] {
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  color: #00f0f0;
+  height: 1em;
+  width: 1em;
+  font-size: 2.6em;
+  border-radius: 2px;
+  transition: all ease-in-out 200ms;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 2px;
+  border: none;
+}
+[id*="closeModal"]:hover,
+[id*="closeModal"]:focus {
+  outline: none;
+  border: none;
+  animation: neon .08s ease-in-out infinite alternate;
+  text-decoration: none;
+  cursor: pointer;
+}
+.button-styled-word {
+    display: inline-block;
+    background-color: #333;
+    border: 1px solid #000;
+    border-radius: 3px;
+    box-shadow:
+        0 3px 0 rgba(0,0,0,0.25),
+        inset 0 2px 0 rgba(170,170,170,0.8);
+    color: #fff;
+    padding: 2px 8px 1px;
+    outline: none;
+    font-size: 0.7em;
+}
+.button-styled-word span {
+    font-family: Helvetica, Arial, sans-serif;
+    text-shadow: none;
+    text-align: center;
+    font-weight: 700;
+}
+.zitat {
+    font-size:small;
+    inline-size: 0.2em;
+}
+@keyframes neon {
+    from {text-shadow:0 0 6px rgba(202,228,225,0.92),0 0 30px rgba(202,228,225,0.34),0 0 12px rgba(30,132,242,0.52),0 0 21px rgba(30,132,242,0.92),0 0 34px rgba(30,132,242,0.78),0 0 54px rgba(30,132,242,0.92);
+    }
+    to {text-shadow:0 0 6px rgba(202,228,225,0.98),0 0 30px rgba(202,228,225,0.42),0 0 12px rgba(30,132,242,0.58),0 0 22px rgba(30,132,242,0.84),0 0 38px rgba(30,132,242,0.88),0 0 60px rgba(30,132,242,1);
+    }
 }
