--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,3 @@
-@font-face {
-     font-family: 'Sarpanch';font-style: normal;
-     src: url('https://jumi.biz/assets/fonts/sarpanch-v11-latin-regular.woff2') format('woff2')
-    /* Super Modern Browsers */
-    , url('https://jumi.biz/assets/fonts/sarpanch-v11-latin-regular.woff') format('woff')
-    /* Modern Browsers */
-    , url('https://jumi.biz/assets/fonts/sarpanch-v11-latin-regular.ttf') format('truetype')
-    /* Safari, Android, iOS */
-    , url('https://jumi.biz/assets/fonts/sarpanch-v11-latin-regular.svg#Sarpanch') format('svg')
-    /* Legacy iOS */ ;
-}
 html {
     background-color: #131313;
 }
@@ -20,64 +9,40 @@ body {
     text-rendering: optimizeSpeed;
     letter-spacing: 0.18rem;
 }
-
 /* Scrollleiste ausblenden */
 body::-webkit-scrollbar {
     width: 0.5em;
     display: none;
     background-color: #000000;
 }
-
-a {
-    text-decoration: none;
-    color: #00f0f0;
+@font-face {
+     font-family: 'Sarpanch';font-style: normal;
+     src: url('https://jumi.biz/assets/fonts/sarpanch-v11-latin-regular.woff2') format('woff2')
+    /* Super Modern Browsers */
+    , url('https://jumi.biz/assets/fonts/sarpanch-v11-latin-regular.woff') format('woff')
+    /* Modern Browsers */
+    , url('https://jumi.biz/assets/fonts/sarpanch-v11-latin-regular.ttf') format('truetype')
+    /* Safari, Android, iOS */
+    , url('https://jumi.biz/assets/fonts/sarpanch-v11-latin-regular.svg#Sarpanch') format('svg')
+    /* Legacy iOS */ ;
 }
-
-p {
-    display: inline-block;
-    line-height: 1.337rem;
+@media (prefers-reduced-motion: reduce) {
+    /* Remove all animations, transitions and smooth scroll
+     for people that prefer not to see them */
+     html:focus-within {
+         scroll-behavior: auto;
+    }
+     *, *::before, *::after {
+         animation-duration: 0.01ms !important;
+         animation-iteration-count: 1 !important;
+         transition-duration: 0.01ms !important;
+         scroll-behavior: auto !important;
+    }
 }
-
-i {
-    font-size: 0.75rem;
-}
-
-dt {
-    font-size: 1.3rem;
-}
-
-ul > li {
-    list-style: none;
-}
-
-code {
-    display: inline-table;
-    font-family: 'Source Code Pro', monospace;
-    color: #8dd88e;
-    text-align: left;
-    background-color: #000000;
-    text-shadow: none;
-    max-width: 80%;
-    padding-left: 0.6em;
-    padding-right: 0.6em;
-    font-size: 0.75rem;
-}
-
-mark {
-    padding-left: 0.2rem;padding-right: 0.2rem;
-    background-color: revert;color: revert;
-    font-size: 0.85rem;
-}
-/* Keine Listenpunkte */
-ul, ol {list-style: none;}
-
-img {width: 100%;}
-
-/* Header */
 header {
     position: relative;
     text-shadow: 1.5px 2px #000000;
-    background: #131313;
+    background-color: #131313;
     color: #00f0f0;
     padding: 2rem 4rem 1.5rem 1.5rem;
     display: flex;
@@ -88,41 +53,67 @@ header {
         rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
         rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
 }
-
 header::after {
     content: "";
     clear: both;
     display: block;
 }
-.flow > *:where(:not(:first-child)) {
-    margin-top: var(--flow-spacer, 0.2rem);
-}
-.flex {
-    display: flex;
-    gap: var(--gap, 0.6rem);
-}
-.kleintxt {font-size:small;}
-.glowtxt {
-    animation: neon .08s ease-in-out infinite alternate;
-    text-decoration: none;
-}
-
 header #jumi-logo {
     position: absolute;
     margin: 0.3rem;
     top: 0.3rem;
     left: 0.7rem;
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     cursor: pointer;
     animation: neon .08s ease-in-out infinite alternate;
     text-decoration: none;
     background-color: transparent;
     color: #00f0f0;
 }
-
-#analyzer {display:flex;justify-content:center;}
-
-/* Impressum */
+main {
+    background-color: #000000;
+    color: #ebebd3;
+    padding: 1rem 0 6vh;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+}
+a {
+    text-decoration: none;
+    color: #00f0f0;
+}
+p {
+    display: inline-block;
+    line-height: 1.337rem;
+}
+i {
+    font-size: 0.75rem;
+}
+dt {
+    font-size: 1.3rem;
+}
+ul > li {
+    list-style: none;
+}
+article h1,
+article h2 {width: 100%;text-align: center;}
+code {
+    display: inline-table;
+    font-family: 'Source Code Pro', monospace;
+    color: #8dd88e;
+    text-align: left;
+    background-color: #000000;
+    text-shadow: none;
+    max-width: 80%;
+    padding-left: 0.6em;
+    padding-right: 0.6em;
+    font-size: 1.6em;
+}
+mark {
+    padding-left: 0.2rem;padding-right: 0.2rem;
+    background-color: revert;color: revert;
+    font-size: 0.85rem;
+}
+ul, ol {list-style: none;}
+img {width: 100%;}
 footer {
     position: absolute;
     margin: 0;
@@ -135,7 +126,6 @@ footer {
     justify-content: space-around;
     align-items: center;
 }
-
 .footer-container {
     width: 100%;
     padding: 1rem 1rem 12vh;
@@ -143,28 +133,23 @@ footer {
     justify-content: space-between;
     align-self: center;
 }
-
 .leftside-profil-icons {
     display: flex;
     left: 1.3rem;
 }
-
 .rightside-site-features {
     display: flex;
     right: 1.6rem;
 }
-
 #github-link {
     width: 1.8rem;
     cursor: pointer;
     padding-right: 0.5rem;
 }
-
 #instagram-link {
     width: 1.8rem;
     cursor: pointer;
 }
-
 #contact-email {
     background-color: #131313;
     color: #00f0f0;
@@ -175,20 +160,8 @@ footer {
     text-decoration: none;
     animation: neon .08s ease-in-out infinite alternate;
 }
-
 #goto-top {
     width: 2rem;
     cursor: pointer;
 }
-
-#wtf-is-jumi {
-    text-transform: lowercase;
-    font-size: smaller;
-    text-align: left;
-}
-#bigHL {width: 100%;text-align: center;}
-#dl-link {padding: 0.6rem;}
-#disabled {display:none;}
-
-
-
+#analyzer {display:flex;justify-content:center;}
