--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -138,6 +138,7 @@ header #jumi-logo {
     outline: none;
     font-family: Helvetica, Arial, sans-serif;
     height: 1rem;
+    line-height: 1.6em;
     font-size: 0.65em;
     padding: 0.1em 0.6em 0.1em;
     margin: 0.2em;
