zitate bearbeitet und so

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,6 +86,10 @@ header #jumi-logo {
     color: #ffbfea;} /* pink */
 .content h2, h3, h4 {color: #8dd88e;} /* grün */
 }
+.content p {
+    display: inline-block;
+    line-height: 1.337rem;
+}
 .content a,
 .content b {color: #00f0f0;} /* blau */
 .content a:hover,
