--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,164 +1,146 @@
-main {
-    background-color: #000000;
-    color: #ebebd3;
-    padding: 1rem 0 6vh;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
+.flow > *:where(:not(:first-child)) {
+    margin-top: 0.2rem;
 }
-a {
-    text-decoration: none;
-    color: #00f0f0;
-}
-i {
-    font-size: 0.75rem;
-}
-dt {
-    font-size: 1.3rem;
-}
-ul > li {
-    list-style: none;
-}
-code {
-    display: inline-table;
-    font-family: 'Source Code Pro', monospace;
-    color: #8dd88e;
-    text-align: left;
-    background-color: #000000;
+.button-styled span {
+    display: inline-block;
+    background-color: #333;
+    border: 1px solid #000;
+    border-radius: 3px;
+    color: #fff;
+    outline: none;
+    font-family: Helvetica, Arial, sans-serif;
+    height: 1rem;
+    line-height: 1.6em;
+    font-size: 0.65em;
+    padding: 0.1em 0.6em 0.1em;
+    margin: 0.2em;
     text-shadow: none;
-    max-width: 80%;
-    padding-left: 0.6em;
-    padding-right: 0.6em;
-    font-size: 1.6em;
+    text-align: center;
+    font-weight: 700;
+    box-shadow:
+        0 3px 0 rgba(0,0,0,0.25),
+        inset 0 2px 0 rgba(170,170,170,0.8);
 }
-mark {
-    padding-left: 0.2rem;padding-right: 0.2rem;
-    background-color: revert;color: revert;
-    font-size: 0.85rem;
+.content img {width: 100%;}
+.content:nth-child(1) {grid-area: one;}
+.content:nth-child(2) {grid-area: two;}
+.content:nth-child(3) {grid-area: three;}
+.content:nth-child(4) {grid-area: four;}
+.content:nth-child(5) {grid-area: five;}
+.content h1 {
+    width: 100%; text-align: center;
+    color: var(--neon-pink);}
+.content h2, h3, h4 {color: var(--matrix-green);}
 }
-ul, ol {list-style: none;}
-img {width: 100%;}
-
-#analyzer {display:flex;justify-content:center;}
-
-/* ### MENU CSS ### MENU CSS ### MENU CSS ### */
-.navigation button {
-    background-color: #131313;
-    border: 1px solid #8dd88e;
-    cursor: pointer;
-    color: #8dd88e;
-    border-radius: 2px;
+.content p {
+    display: inline-block;
 }
-.navigation button:hover {
+.content a,
+.content b {
+    color: var(--neon-blue);
     text-decoration: none;
-    color: #ffbfea;
+}
+.content a:hover,
+.content a:focus, {
+    text-decoration: none;
+    color: var(--neon-pink);
     animation: neon .08s ease-in-out infinite alternate;
     text-shadow: none;
 }
-.menu-button {
-    position: absolute;
-    padding: 1.3em; /*Button-Position*/
-    background-color: transparent;
-    border: 0;
-    top: 0.5rem;
-    right: 0.5rem;
+[id*="modalTrigger"] {
+    border-radius: 3px;
     cursor: pointer;
 }
-.hidden-menu {
-    clip: rect(0, 0, 0, 0);
-    clip-path: inset(50%);
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
+[id*="modalTrigger"]:hover {
+    opacity: 0.75;
+    outline: 1px solid var(--neon-pink);
+    animation: neon-box .08s ease-in-out infinite alternate;
+}
+dialog[open] {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    border-radius: 0.3rem;
+    text-shadow: 1.5px 2px #000;
+    background-color: var(--vader-black);
+    color: #8dd88e; /* grün */
+    border: none;
     box-shadow:
         rgba(0, 240, 240, 0.4) 0px 2px 4px,
         rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
         rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
-    white-space: nowrap;
-    width: 1px;
 }
-.menu-icon,.menu-icon::before,.menu-icon::after {
-     content: "";
-     display: block;
-     background-color: #00f0f0;
-     height: 3px;
-     width: 1.8em;
-     border-radius: 2px;
-     transition: all ease-in-out 400ms;
-     box-shadow:
-          rgba(0, 240, 240, 0.4) 0px 2px 4px,
-          rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
-          rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
+dialog::backdrop {background-color: rgba(0, 0, 0, 0.5);
 }
-.menu-icon::before {
-     transform: translateY(-6px);
-}
-.menu-icon::after {
-     transform: translateY(3px);
-}
-.menu-list {
-    z-index: 1;
-    position: absolute;
-    top: 3.35em;
-    right: 0%;
-    transition: clip-path ease-in-out 300ms;
+dialog > img {border-radius: 0.3rem;}
+dialog [id*="closeModal"] {
     margin: 0;
     padding: 0;
-    list-style: none;
-    border-bottom-left-radius: 0.5rem;
-    background-color: #131313;
-    color: #ffbfea; /* pink */
-    box-shadow:
-        rgba(0, 240, 240, 0.4) -1px 2px 4px,
-        rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
-        rgba(0, 240, 240, 0.2) 0px -3px 0px inset;
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+    background-color: transparent;
+    color: var(--neon-blue);
+    height: 1em;
+    width: 1em;
+    font-size: 2.6em;
+    transition: all ease-in-out 200ms;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 2px;
+    border: none;
 }
-.menu-list[data-state="opened"] {
-    animation: clipPathCircleOpen 300ms ease-in-out forwards;
-    display: block;
-}
-.menu-list[data-state="closing"] {
-    animation: clipPathCircleClose 300ms ease-in-out forwards;
-}
-.menu-list[data-state="closed"] {
-    display: none;
-}
-.navigation {z-index: 1;}
-.navigation li {
-    border-bottom: 1px solid #000000;
-    color: #00f0f0;
-    /*top: 3.3em;*/
-}
-.navigation li:last-child {border-bottom: none;}
-.navigation a {
-    font-size: 1.3em;
-    color: #8dd88e;
-    display: block;
-    padding: 1.3rem 1.1rem 1.3rem 1.5rem;
-    vertical-align: center;
-    text-transform: uppercase;
-    text-decoration: none;
-    border-bottom-left-radius: 0.35rem;
-}
-.navigation a:hover,.navigation a:focus {
+dialog [id*="closeModal"]:hover,
+dialog [id*="closeModal"]:focus {
+    outline: none;
+    border: none;
     animation: neon .08s ease-in-out infinite alternate;
-    text-shadow: none;
+    text-decoration: none;
+    cursor: pointer;
 }
-[aria-expanded="true"] .menu-icon {
-     transform: rotate(45deg);
+footer .footer-container {
+    width: 100%;
+    padding: 1em 1rem 12vh;
+    display: flex;
+    justify-content: space-between;
+    vertical-align: middle;
 }
-[aria-expanded="true"] .menu-icon::before {
-     opacity: 0;
+footer .leftside-profil-icons {
+    display: flex;
+    left: 15px;
 }
-[aria-expanded="true"] .menu-icon::after {
-     transform: translateY(-3px) rotate(-90deg);
+footer .rightside-site-features {
+    display: flex;
+    right: 15px;
 }
-.list-icon {
-    display: inline-block;
-    margin-right: 0.5rem;
-    width: 1.1em;
-    text-align: left;
-    color: rgba(255, 255, 255, 0.4);
+footer #github-link {
+    cursor: pointer;
 }
-.list-icon + span {
-    text-transform: none;
-    font-size: 0.7em;
+footer #instagram-link {
+    cursor: pointer;
+    margin-left: 0.5rem;
 }
+footer #contact-email {
+    background-color: var(--vader-black);
+    color: var(--neon-blue);
+    font-family: 'Sarpanch', sans-serif;
+    font-weight: 200;
+    letter-spacing: 0.12em;
+    font-size: 1.3rem;
+    text-decoration: none;
+    animation: neon .08s ease-in-out infinite alternate;
+}
+footer #export-icon {
+    cursor: pointer;
+    padding-right: 0.5rem;
+}
+footer #goto-top {
+    width: 2rem;
+    cursor: pointer;
+}
+ul, ol {list-style: none;}
+#analyzer {display:flex;justify-content:center;}
