--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -27,8 +27,8 @@
     *, *::before, *::after {
         animation-duration: 0.01ms !important;
         animation-iteration-count: 1 !important;
-        transition-duration: 0.01ms !important;
         scroll-behavior: auto !important;
+        transition-duration: 0.01ms !important;
     }
 }
 @media screen and (min-width: 35em) {
@@ -60,54 +60,39 @@
         "three four four five";
     }
 }
-.header-content > #jumi-logo {
-    text-align: center;
-    cursor: pointer;
-    vertical-align: middle;
-}
-.header-content > #jumi-biz {
-    text-align: center;
-    cursor: pointer;
-    animation: neon .08s ease-in-out infinite alternate;
-    text-decoration: none;
-    background-color: transparent;
-    color: var(--neon-blue);
-    line-height: 1.337em;
-}
 body::-webkit-scrollbar {
 /* Scrollleiste ausblenden */
     background-color: #000;
-    width: 3px;
     display: none;
+    width: 3px;
 }
 header::after {
-    content: "";
     clear: both;
+    content: "";
     display: block;
 }
 header a {color: var(--neon-blue);text-decoration: none;}
-.navigation {z-index: 1;}
+header a:hover, header a:focus {
+    animation: neon .08s ease-in-out infinite alternate;
+    color: var(--neon-pink);
+    text-shadow: none;
+}
 .menu-list li:last-child > a{
-    font-size:small;
+    font-size:1em;
     text-transform: lowercase;
 }
 .menu-list li:last-child i{
-    padding: 1.2em;
+    padding: 1em;
 }
 .menu-list a {
+    border-bottom-left-radius: 0.35rem;
     color: var(--matrix-green);
     display: block;
     font-family: 'Sarpanch', sans-serif;
-    text-transform: uppercase;
-    text-decoration: none;
-    border-bottom-left-radius: 0.35rem;
-    text-align: left;
     padding-right: 0.6em;
-}
-.menu-list a:hover,.menu-list a:focus {
-    color: var(--neon-pink);
-    animation: neon .08s ease-in-out infinite alternate;
-    text-shadow: none;
+    text-align: left;
+    text-decoration: none;
+    text-transform: uppercase;
 }
 .menu-list[data-state="opened"] {
     animation: clipPathCircleOpen 300ms ease-in-out forwards;
@@ -119,19 +104,14 @@ header a {color: var(--neon-blue);text-decoration: none;}
 .menu-list[data-state="closed"] {
     display: none;
 }
-.menu-button:hover {
-    color: var(--neon-pink);
-    animation: neon .08s ease-in-out infinite alternate;
-    text-shadow: none;
-}
 .menu-icon,.menu-icon::before,.menu-icon::after {
+     background-color: var(--neon-blue);
+     border-radius: 2px;
      content: "";
      display: block;
-     background-color: var(--neon-blue);
      height: 3px;
-     width: 1.8rem;
-     border-radius: 2px;
      transition: all ease-in-out 400ms;
+     width: 20px;
      box-shadow:
           rgba(0, 240, 240, 0.4) 0px 2px 4px,
           rgba(0, 240, 240, 0.3) 0px 7px 13px -3px,
@@ -151,11 +131,5 @@ header a {color: var(--neon-blue);text-decoration: none;}
 }
 [aria-expanded="true"] .menu-icon::after {
      transform: translateY(-3px) rotate(-90deg);
-}
-.header-text span{
-    padding:0.3em;
-    display: inline-block;
-    vertical-align: middle;
-    font-size:small;
 }
 
